--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Este projeto surgiu após algumas pessoas se unirem para aprender RubyOnRails!
+e com isso talvez dominarem o mundo hahahahahahahahaha!
