--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 Este projeto surgiu após algumas pessoas se unirem para aprender RubyOnRails!
-e quem sabe dominarem o mundo hahahahahahahahaha!
+
+Por favor, fazem o fork e comecem a brincar com o GIT, já já vamos brincar com RubyOnRails :)
