Correções e adições de algumas dicas

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
-Este projeto surgiu após algumas pessoas se unirem para aprender RubyOnRails!
+Este projeto surgiu após algumas pessoas se unirem para aprender Ruby 
+on Rails!
 
-Por favor, fazem o fork e comecem a brincar com o GIT, já já vamos brincar com RubyOnRails :)
+Por favor, façam o fork e comecem a brincar com o GIT, já já vamos 
+brincar com Ruby on Rails :)
+
+
+E por favor mais uma vez, façam o "pull request" para Cairo apenas...e 
+mantenham os seus respectivos repositórios locais sincronizados fazendo 
+sempre um fetch do repositório de Cairo.
