--- a/README
+++ b/README
@@ -4,7 +4,7 @@ on Rails!
 Por favor, façam o fork e comecem a brincar com o GIT, já já vamos 
 brincar com Ruby on Rails :)
 
+#######
+Galera, uma coisa que estava me deixando irritado, era o fato de fazer isso manualmente, até que o Elomar pediu pra eu adicionar vocês como colaboradores...
 
-E por favor mais uma vez, façam o "pull request" para Cairo apenas...e 
-mantenham os seus respectivos repositórios locais sincronizados fazendo 
-sempre um fetch do repositório de Cairo.
+Só que surgiu um problema, como fazer as coisas? Então conversando a pouco com o Juarez, a gente conseguiu :D
